feat: add basic functionality

--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
     <title>OpenWeatherMap Project</title>
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+            <h1>Получаем прогноз погоды по API</h1>
+            
+        </div>
+        <div class="weather-box">
+            <div class="city-name"></div>
+            <div class="city-temp"></div>
+            <div class="weather-desc"></div>
+            <div class="weather-icon"></div>
+
+
+        </div>
+    </div>
     
 
-    <script src="script.js"></script>    
+    <script src="script.js"></script>
 </body>
 </html>
